// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectable is rendered 1`] = `
Array [
  <div
    class="euiSelectable testClass1 testClass2"
    data-test-subj="test subject string"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable props allowExclusions 1`] = `
Array [
  <div
    class="euiSelectable"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable props height can be forced 1`] = `
Array [
  <div
    class="euiSelectable"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable props height can be full 1`] = `
Array [
  <div
    class="euiSelectable euiSelectable-fullHeight"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable props isLoading 1`] = `
Array [
  <div
    class="euiSelectable"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable props listProps 1`] = `
Array [
  <div
    class="euiSelectable"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable props renderOption 1`] = `
Array [
  <div
    class="euiSelectable"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable props searchable 1`] = `
Array [
  <div
    class="euiSelectable"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable props singleSelection 1`] = `
Array [
  <div
    class="euiSelectable"
  />,
  <div
    class="euiScreenReaderOnly"
  >
    <p
      id="generated-id-instructions"
    >
      'Use up and down arrows to move focus over options. Enter to select. Escape to collapse options.'
    </p>
  </div>,
]
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its popover 1`] = `
Object {
  "activeOptionIndex": 0,
  "isFocused": true,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;

exports[`EuiSelectable should not reset the activeOptionIndex nor isFocused when EuiSelectable is blurred in favour of its popover 2`] = `
Object {
  "activeOptionIndex": undefined,
  "isFocused": false,
  "searchValue": "",
  "visibleOptions": Array [
    Object {
      "data-test-subj": "titanOption",
      "label": "Titan",
    },
    Object {
      "label": "Enceladus",
    },
    Object {
      "label": "Pandora is one of Saturn's moons, named for a Titaness of Greek mythology",
    },
  ],
}
`;
